# euler-copilot-framework

./: .dockerignore  .gitignore  .ruff.toml  ChangeLog  Dockerfile  Dockerfile-base  Dockerfile-base-arm  Dockerfile-base-x86  README.md  nohup.out  openapi.json  pyproject.toml
apps/: __init__.py  constants.py  exceptions.py  main.py
apps/common/: __init__.py  config.py  cryptohub.py  lance.py  minio.py  mongo.py  oidc.py  postgres.py  process_handler.py  queue.py  security.py  singleton.py  wordscheck.py
apps/dependency/: __init__.py  csrf.py  session.py  user.py
apps/entities/: __init__.py  agent.py  api_key.py  appcenter.py  collection.py  config.py  enum_var.py  flow.py  flow_topology.py  mcp.py  message.py  node.py  openapi.py  pool.py  rag_data.py  record.py  request_data.py  response_data.py  scheduler.py  session.py  task.py  user.py  vector.py
apps/llm/: __init__.py  embedding.py  function.py  prompt.py  reasoning.py  snippet.py  token.py
apps/manager/: __init__.py  api_key.py  appcenter.py  application.py  audit_log.py  blacklist.py  comment.py  conversation.py  document.py  domain.py  flow.py  knowledge.py  llm.py  mcp_service.py  node.py  record.py  service.py  session.py  task.py  token.py  user.py  user_domain.py
apps/models/: __init__.py  app.py  base.py  blacklist.py  comment.py  conversation.py  document.py  flow.py  lance.py  llm.py  mcp.py  minio.py  mongo.py  node.py  record.py  service.py  session.py  tag.py  task.py  user.py  vector.py  vectors.py
apps/routers/: __init__.py  api_key.py  appcenter.py  auth.py  blacklist.py  chat.py  client.py  comment.py  conversation.py  document.py  domain.py  flow.py  health.py  knowledge.py  llm.py  mcp_service.py  mock.py  parameter.py  personal_token.py  record.py  service.py  tag.py  user.py
apps/scheduler/: __init__.py  json_schema.py  openapi.py  util.py
apps/schemas/: __init__.py  agent.py  api_key.py  appcenter.py  blacklist.py  collection.py  comment.py  config.py  conversation.py  document.py  enum_var.py  flow.py  flow_topology.py  llm.py  mcp.py  (+16 more)
assets/: .config.example.toml
sample/: README.md
tests/: __init__.py
(+404 files in other folders)
