[project]
name = "euler-copilot-framework"
version = "0.9.5"
description = "EulerCopilot 后端服务"
requires-python = "==3.11.6"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.14",
    "asyncer>=0.0.8",
    "cryptography>=44.0.2",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "jionlp>=1.5.20",
    "jsonschema>=4.23.0",
    "lancedb>=0.21.2",
    "minio>=7.2.15",
    "ollama>=0.4.7",
    "openai>=1.68.2",
    "pandas>=2.2.3",
    "pymongo>=4.11.3",
    "python-jsonpath>=1.3.0",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "referencing>=0.36.2",
    "rich>=13.9.4",
    "sglang>=0.4.4.post2",
    "tiktoken>=0.9.0",
    "toml>=0.10.2",
    "uvicorn>=0.34.0",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[dependency-groups]
dev = [
    "coverage>=7.7.1",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.2",
]
